--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
             <img src="images.png" alt="">
             <header>
             <ul>
-                <li><a href="gpt.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT ME</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>    
