--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a target="_blank" href="about.html">ABOUT ME</a></li>
+                <li><a href="about.html">ABOUT ME</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>    
             </ul>
